fixed alignment

--- a/app/styles/_bottom.scss
+++ b/app/styles/_bottom.scss
@@ -48,9 +48,11 @@
 .bottom__footer--copyright {
   display: flex;
   align-items: center;
+  padding-left: 5rem;
 }
 
 .bottom__footer--nav {
   display: flex;
   align-items: center;
+  padding-right: 5rem;
 }
