--- a/app/styles/_navbar.scss
+++ b/app/styles/_navbar.scss
@@ -4,8 +4,8 @@
 
 .navbar {
   display: flex;
-  align-items: center;
   justify-content: space-between;
+  padding: 0 5rem;
 }
 
 .hero-pic {
